--- a/style.css
+++ b/style.css
@@ -16,13 +16,12 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 10px;
     scroll-behavior: smooth;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.8rem;
     font-weight: 400;
     line-height: 1.4;
     color: var(--main-white);
@@ -203,7 +202,7 @@ header section p {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     padding: 0rem 2rem;
     text-align: center;
     background: var(--main-gray);
@@ -286,17 +285,67 @@ footer p a {
 
 /* Media Query Start */
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 600px) { 
+    header nav {
+        justify-content: center;
+    }
+
     header nav ul {
-        margin: auto;
+        margin-right: 0px;
     }
 }
 
-@media only screen and (max-width: 400px) {
-    #contact .contact-links {
-        display: flex;
+@media only screen and (max-width: 450px) {
+    header section h1 {
+        font-size: 4rem;
+    }
+
+    .projects-section .projects-grid {
+        grid-template-columns: minmax(240px, 1fr);
+    }
+
+    .contact-section {
+        height: 100vh;
+        padding: 4rem 2rem;
+        scroll-margin-top: 40px;
+    }
+
+    .contact-section .contact-links {
         flex-direction: column;
         -ms-flex-direction: column;
+    }
+
+    .contact-section .contact-section-header h2 {
+        font-size: 5rem;
+        margin-bottom: 2rem;
+    }
+
+    footer {
+        flex-direction: column;
+        -ms-flex-direction: column;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    header nav ul li a,
+    .projects-section .projects-grid a p,
+    .projects-section .projects-grid a:hover p span,
+    .contact-section .contact-links a {
+        font-size: 1.8rem;
+    }
+
+    .projects-section h2 {
+        font-size: 3rem;
+    }
+
+    .contact-section .contact-section-header h2 {
+        font-size: 3.4rem;
+        margin-bottom: 1rem;
+    }
+
+    .contact-section .contact-section-header p {
+        font-size: 1.4rem;
     }
 }
 
